# asic-copilot

./: .gitignore  Dockerfile  README.md  SPEC.md  main.py  pyproject.toml
backend/agent/: graph.py  math_utils.py  models.py  router.py  state.py  tools.py
backend/data/: asic_spec.md  generator.py  telemetry_CX8_001.csv  telemetry_CX8_002.csv  yield_data.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  DataBrowser.jsx  TraceVisualizer.jsx
tests/: test_math.py  test_router.py  test_tools.py
