[project]
name = "asic-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "uvicorn>=0.51.0",
]
